Ai的Controller
